<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/settings_lblConnString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_lblConnString"
        android:textSize="@dimen/SmallText" />

    <EditText
        android:id="@+id/settings_txtConnString"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:inputType="textMultiLine"
		android:scrollbars="vertical"
        android:text="@string/query_sampleQuery"
        android:textSize="@dimen/SmallText" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_txtRowsPerPage"
        android:textSize="@dimen/SmallText"/>
    
    <EditText 
        android:id="@+id/settings_txtRowsPerPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    

    <View android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
    <Button
        android:id="@+id/settings_btnSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:text="@string/settings_btnSave" />

</LinearLayout>