<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/query_lytEditQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/query_lblEditQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_lblEditQuery" />

        <CheckBox
            android:id="@+id/query_chkEditQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <EditText
        android:id="@+id/query_txtQuery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:inputType="textMultiLine"
		android:scrollbars="vertical"
        android:text="@string/query_sampleQuery"
        android:textSize="@dimen/SmallText" />

    <LinearLayout
        android:id="@+id/query_lytButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_gravity="bottom">

        <Button
            android:id="@+id/query_btnCancel"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/query_btnCancel" />

        <Button
            android:id="@+id/query_btnContinue"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/query_btnContinue" />
    </LinearLayout>

</LinearLayout>