<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c8c8c8"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/queryBuilder_lblConnString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/queryBuilder_lblConnString"
        android:textSize="@dimen/SmallText" />

    <RadioGroup
        android:id="@+id/queryBuilder_rdbGrpConnType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/queryBuilder_rdbSqlite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/queryBuilder_rdbSQLite" />

        <RadioButton
            android:id="@+id/queryBuilder_rdbOdbc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queryBuilder_rdbOdbc" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown_border" >

        <hr.fer.poslovna.gui.MySpinner
            android:id="@+id/queryBuilder_spnTables"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown_border" >

        <hr.fer.poslovna.gui.MultiSelectionSpinner
            android:id="@+id/queryBuilder_spnMeasures"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/queryBuilder_lstAttributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ExpandableListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/queryBuilder_btnExecute"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/queryBuilder_btnExecute" />
</LinearLayout>