<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/result_lblMetaInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_lblMetaInfo"
        android:textSize="@dimen/SmallText" />

    <LinearLayout
        android:id="@+id/result_lytTbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/result_lytButtons"
        android:layout_below="@+id/result_lblMetaInfo"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/result_lytButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/result_btnPrevious"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/result_btnPrevious"
            android:enabled="false" />

        <Button
            android:id="@+id/result_btnNext"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/result_btnNext"
            android:enabled="false" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/result_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone" >
    </ProgressBar>

</RelativeLayout>